--- a/Scraping_Data_YT_Comment.ipynb
+++ b/Scraping_Data_YT_Comment.ipynb
@@ -69,17 +69,21 @@
     {
       "cell_type": "code",
       "source": [
+        "#import libraries\n",
         "import googleapiclient.discovery\n",
         "import pandas as pd\n",
         "\n",
+        "#API setup\n",
         "api_service_name = \"youtube\"\n",
         "api_version = \"v3\"\n",
         "DEVELOPER_KEY = \"AIzaSyDTiM6o3yFy-NBtoUJFJi0f2OCY-6_BWWw\"\n",
         "\n",
+        "#Build the API Client\n",
         "youtube = googleapiclient.discovery.build(\n",
         "    api_service_name, api_version, developerKey=DEVELOPER_KEY\n",
         ")\n",
         "\n",
+        "#Make the Request to Fetch Comments\n",
         "request = youtube.commentThreads().list(\n",
         "    part=\"snippet\",\n",
         "    videoId=\"dY_3acmFFRQ\",\n",
@@ -87,6 +91,7 @@
         ")\n",
         "response = request.execute()\n",
         "\n",
+        "#parse the comment data\n",
         "comments = []\n",
         "\n",
         "for item in response['items']:\n",
@@ -99,6 +104,7 @@
         "      comment['textDisplay']\n",
         "  ])\n",
         "\n",
+        "#store the data in a dataframe\n",
         "df = pd.DataFrame(comments, columns=['author', 'published_at', 'updated_at','like_count', 'text'])\n",
         "\n",
         "df.head(10)"
